kubernetes/stage/app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: diffaction-organizations-service-deployment
  labels:
    app: diffaction-organizations-service
    name: diffaction-organizations-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: diffaction-organizations-service
  template:
    metadata:
      labels:
        app: diffaction-organizations-service
    spec:
      containers:
        - name: diffaction-organizations-service
          image: artemowkin/diffaction-organizations-service:latest
          ports:
            - containerPort: 8000
              name: web
