kubernetes/stage/app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: diffaction-organizations-service
spec:
  selector:
    app: diffaction-organizations-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      name: web
